static/css/comment.css
.comment {
  background: #FFFACD !important;
  border-radius: 0px;
}

.sidebar-comment:hover .comment-text{
  height:auto;
  white-space:normal;
  text-overflow:auto;
}

.sidebar-comment p{
  line-height:24px;
}

.sidebar-comment:hover{
  height:auto;
  white-space:normal;
  text-overflow:auto;
}

.sidebar-comment:hover .comment-reply-button {
  display:block;
}

.comment-modal{
  position:absolute;
  min-width:20px;
  min-height:10px;
  background-color:#fff;
  z-index:99999;
  top:0;
  left:0;
  border:solid #ccc 1px;
  display:none;
  padding:10px 10px 0px 10px;
  font-size:12px;
  line-height:24px;
}

.comment-modal input{
  display:none;
}

.comment-changeTo-approve{
  margin:0px 0px 10px 0px;
}

.comment-modal .comment-changeTo-approve{
  display:none;
}

.sidebar-comment-reply{
  padding-top:5px;
  padding-left:10px;
}

.sidebar-comment-reply:nth-child(even){
  background-color:#f1f1f1;
}

.comment-reply{
  max-width:190px;
  margin-bottom:5px;
}

.comment-reply-input{
  margin-top:10px;
  width:187px;
}

#comments {
  display:none;
  width:210px;
  bottom:0;
  position:absolute;
  top:10px;
  right:0px;
  font-family: Helvetica, Arial, sans-serif;
  z-index:1;
}

.comment-reply-button{
  float:right;
  display:none;
}

.comment-reply-button:hover{
  cursor:pointer;
  color:#000;
}

.sidebar-comment {
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  right:0px;
  margin-left: 10px;
  padding: 3px 5px;  
  background: white;
  width:90%;
  height:20px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  -moz-box-shadow: 0 0 2px #888;
  -webkit-box-shadow: 0 0 2px #888;
  box-shadow: 0 0 2px #888;
  position:absolute;
  font-size:12px;
}

.sidebar-comment input[type=submit]{
  padding:2px;
}

.sidebar-comment:hover{
  z-index:999;
}

.sidebar-comment.mouseover {

  z-index:99999;
  margin: 0px 0 0 14px;
  white-space:normal;
  height:auto;
  -webkit-transition: z-index 100ms ease-in, margin 100ms ease-in, background 100ms ease-in;
  -moz-transition: z-index 100ms ease-in, margin 100ms ease-in, background 100ms ease-in;
  -ms-transition: z-index 100ms ease-in, margin 100ms ease-in, background 100ms ease-in;
  -o-transition: z-index 100ms ease-in, margin 100ms ease-in, background 100ms ease-in;
  transition: z-index 100ms ease-in, margin 100ms ease-in, background 100ms ease-in;
}

.comment-author-name {
  color: #555;
  font-weight:bold;
  font-size: 1em;
  display:inline;
}

.comment-changeTo-label{
  color: #555;
  font-weight:bold;
  font-size: 1em;
  display:inline;
}

.comment-text {
  font-size: 1em;
  color: #333;
  word-wrap: break-word;
  white-space: normal;
  display: inline;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.sidebar-comment textarea {
  border: 2px solid #DDD;
  background: #fff;
  width: 170px;
  height: 40px;
  padding: 5px;
  font-size:1em;
}

.comment-content:focus {
  border: 2px solid #ccc;
}

.comment-buttons input {
  color: #666;
  border: 2px solid #DDD;
  background: #EEE;
  width: 59px;
  height: 30px;
  font-size:12px;
}

.comment-buttons input[type="submit"] {
  margin-right: 5px;
  width:120px;
}

.comment-buttons input:hover {
  color: #333;
  cursor: pointer;
}

#newComment.visible{
  width:250px;
  right:0px;
  -webkit-transition: width 500ms;
  -moz-transition: width 500ms;
  -ms-transition: width 500ms;
  -o-transition: width 500ms;
  transition: width 500ms;
  height:auto;
  min-height:100px;
}

#newComment.hidden{
  width:0px;
  right:-50px;
  -webkit-transition: right 500ms, width 500ms;
  -moz-transition: right 500ms, width 500ms;
  -ms-transition: right 500ms, width 500ms;
  -o-transition: right 500ms, width 500ms;
  transition: right 500ms, width 500ms;
}

#newComment{
  position:fixed;
  display:block;
  width:0px;
  z-index:1000;
  font-size:12px;
}

#outerdocbody{
  width:1050px;
}

/* dont display comments at < 850px wide */
@media (max-width: 850px) {
  #outerdocbody{
    width:100%;
    padding-right:0px;
  }
  #innerdocbody{
    margin-right:0px;
  }
}

/* display comments at > 850px wide */
@media (min-width: 850px) {
  #comments.active{
    display:block;
  }

  #innerdocbody.comments:not(.innerPV){
    margin-right:200px;
  }

}

.suggestion, .reply-suggestion{
  display:none;
}

.sidebar-comment-reply input{
  margin-bottom:10px;
/*  margin-left:40px; */
}

